modifique estilos hasta 400px de pagina3.

--- a/pagina3.html
+++ b/pagina3.html
@@ -43,10 +43,10 @@
                 <ul style="margin-top: 30px;">
                     <li>Educación:
                         <ul>
-                            <li>Estudiante de Tecnicatura Universitaria en Programación (TUP) UTN - Facultad Regional Pacheco</li>
-                            <li>Desarrolo Web Frontend - Fundación Telefónica</li>
-                            <li>Desarrollo Web Fullstack - Programa CodoACodo de la Ciudad de Bueos Aires</li>
-                            <li>Curso .Net y C# UTN-Buenos Aires</li>
+                            <li>Estudiante de Tecnicatura Universitaria en Programación (TUP) UTN - Facultad Regional General Pacheco</li>
+                            <li>En Curso - Desarrolo Web Frontend - Fundación Telefónica</li>
+                            <li>En Curso - Desarrollo Web Fullstack - Programa CodoACodo de la Ciudad de Bueos Aires</li>
+                            <li>En Curso - Curso .Net y C# UTN-Buenos Aires</li>
                         </ul>
                     </li>                    
                 </ul>
