--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="index.html">Proyectos</a></li>
             <li><a href="pagina2.html">Blog Personal</a></li>
             <li><a href="pagina3.html">Curriculum</a></li>
+            <li><a href="Contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main class="principal">
