Agregue estilos responsive en pagina2.

--- a/pagina2.html
+++ b/pagina2.html
@@ -20,6 +20,45 @@
     </nav>
     <main>
         <section>
+            <h1>NOVEDADES</h1>            
+            <article>
+                <img src="https://media.istockphoto.com/photos/top-view-asian-ux-developer-and-ui-designer-brainstorming-about-app-picture-id1218511457?k=20&m=1218511457&s=612x612&w=0&h=qh5LzMi8m1TWBL5F-5m9lX1-I_9JbSTZpZulchpWwpE=" alt="Articulo_1">
+                <div class="contenedor_article" style="display: flex;flex-direction: column;">
+                    <h3>EQUIPOS</h3>
+                    <p style="text-align: justify;margin-left: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea veniam deserunt recusandae excepturi rem nulla architecto, alias earum iure reiciendis accusamus magni laborum, a libero repellat unde fuga aperiam minus.</p>
+                </div>                
+            </article>
+            <article>
+                <img src="https://media.istockphoto.com/photos/technology-background-and-circuit-board-with-database-message-picture-id1226384026?k=20&m=1226384026&s=612x612&w=0&h=SF7_typow62hIQofObrzjkcfaBvZn8TWePaKDPHQAog=" alt="Articulo_2">
+                <div class="contenedor_article" style="display: flex;flex-direction: column;">
+                    <h3>MySQL</h3>
+                    <p style="text-align: justify;margin-left: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea veniam deserunt recusandae excepturi rem nulla architecto, alias earum iure reiciendis accusamus magni laborum, a libero repellat unde fuga aperiam minus.</p>
+                </div>                
+            </article>
+            <article>
+                <img src="https://media.istockphoto.com/photos/top-view-asian-ux-developer-and-ui-designer-brainstorming-about-app-picture-id1218511457?k=20&m=1218511457&s=612x612&w=0&h=qh5LzMi8m1TWBL5F-5m9lX1-I_9JbSTZpZulchpWwpE=" alt="Articulo_1">
+                <div class="contenedor_article" style="display: flex;flex-direction: column;">
+                    <h3>EQUIPOS</h3>
+                    <p style="text-align: justify;margin-left: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea veniam deserunt recusandae excepturi rem nulla architecto, alias earum iure reiciendis accusamus magni laborum, a libero repellat unde fuga aperiam minus.</p>
+                </div>                
+            </article>
+            <article>
+                <img src="https://media.istockphoto.com/photos/technology-background-and-circuit-board-with-database-message-picture-id1226384026?k=20&m=1226384026&s=612x612&w=0&h=SF7_typow62hIQofObrzjkcfaBvZn8TWePaKDPHQAog=" alt="Articulo_2">
+                <div class="contenedor_article" style="display: flex;flex-direction: column;">
+                    <h3>MySQL</h3>
+                    <p style="text-align: justify;margin-left: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea veniam deserunt recusandae excepturi rem nulla architecto, alias earum iure reiciendis accusamus magni laborum, a libero repellat unde fuga aperiam minus.</p>
+                </div>                
+            </article>
+            <article>
+                <img src="https://media.istockphoto.com/photos/top-view-asian-ux-developer-and-ui-designer-brainstorming-about-app-picture-id1218511457?k=20&m=1218511457&s=612x612&w=0&h=qh5LzMi8m1TWBL5F-5m9lX1-I_9JbSTZpZulchpWwpE=" alt="Articulo_1">
+                <div class="contenedor_article" style="display: flex;flex-direction: column;">
+                    <h3>EQUIPOS</h3>
+                    <p style="text-align: justify;margin-left: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea veniam deserunt recusandae excepturi rem nulla architecto, alias earum iure reiciendis accusamus magni laborum, a libero repellat unde fuga aperiam minus.</p>
+                </div>                
+            </article>
+        </section>        
+        <!--
+        <section>
             <h1>NOVEDADES</h1>
             <article>
                 <img src="https://media.istockphoto.com/photos/top-view-asian-ux-developer-and-ui-designer-brainstorming-about-app-picture-id1218511457?k=20&m=1218511457&s=612x612&w=0&h=qh5LzMi8m1TWBL5F-5m9lX1-I_9JbSTZpZulchpWwpE=" alt="Articulo_1">
@@ -47,6 +86,7 @@
                 <li>Blockchain</li>
             </ul>
         </aside>
+        -->
     </main>
     <footer>
         <div class="iconos">
